--- a/asd.html
+++ b/asd.html
@@ -27,7 +27,7 @@
                <div class="row">
                   <div class="col-md-4 col-sm-12 left-rs">
                      <div class="navbar-header">
-                        <button type="button" id="top-menu" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"> 
+                        <button type="button" id="top-menu" class="navbar-toggle collapsed" data-toggle="collapse"></button>
                         <span class="sr-only">Toggle navigation</span> 
                         <span class="icon-bar"></span> 
                         <span class="icon-bar"></span> 
@@ -88,13 +88,7 @@
             </div>
          </div>
       </div>
-      <div id="sidebar" class="top-nav">
-         <ul id="sidebar-nav" class="sidebar-nav">
-            <li><a href="#">Help</a></li>
-            <li><a href="howitworks.html">How it works</a></li>
-            <li><a href="#">chamb for Business</a></li>
-         </ul>
-      </div>
+      
       <div class="page-content-product">
          <div class="main-product">
             <div class="container">
