--- a/index.html
+++ b/index.html
@@ -77,26 +77,44 @@
    <div class="szallitas">
       <div class="container">
          <h1>Kosár</h1>
-         <div class="list">
-
+         <div id="list">
+            <p></p>
+            <p id="elso"></p>
+            <p id="masodik"></p>
+            <p id="harmadik"></p>
+            <p id="negyedik"></p>
+            <p id="otodik"></p>
+            <p id="hatodik"></p>
+            <p id="hetedik"></p>
+            <p id="nyolcadik"></p>
          </div>
          <h2 class="bezar">Mégsem</h2>
+         <h2 class="fizetes" >asd</h2>
       </div>
    </div>
+
+   <div class="fiz">
+      <div class="container">
+         <div>
+            <p>asd</p>
+         </div>
+      </div>
+   </div>
+   
 
    <div class="page-content-product">
       <div class="main-product">
          <div class="container">
             <div class="row clearfix">
                <div class="find-box">
-                  <h1>A bolt öcsém</h1>
+                  <h1>A bót öcsém</h1>
                </div>
             </div>
             <div class="row clearfix">
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>1</h4>
-                     <img src="images/product/1.png" alt="" />
+                     <h4>Cigány gyerek</h4>
+                     <img src="images/product/1.jpg" alt="" />
                      <p><input type="number" name="" id="1"> <button id="egy" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -104,7 +122,7 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>2</h4>
+                     <h4>Puzsi Pack (5KG)</h4>
                      <img src="images/product/2.png" alt="" />
                      <p><input type="number" name="" id="2"> <button id="ketto" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
@@ -114,8 +132,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>3</h4>
-                     <img src="images/product/4.png" alt="" />
+                     <h4>Masszázs</h4>
+                     <img src="images/product/3.png" alt="" />
                      <p><input type="number" name="" id="3"> <button id="harom" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -123,8 +141,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>4</h4>
-                     <img src="images/product/5.png" alt="" />
+                     <h4>Személyi edzés</h4>
+                     <img src="images/product/4.jpg" alt="" />
                      <p><input type="number" name="" id="4"> <button id="negy" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -132,8 +150,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>5</h4>
-                     <img src="images/product/10.png" alt="" />
+                     <h4>Fejvadász</h4>
+                     <img src="images/product/5.jpg" alt="" />
                      <p><input type="number" name="" id="5"> <button id="ot" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -141,8 +159,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>6</h4>
-                     <img src="images/product/11.png" alt="" />
+                     <h4>Milka csokoládé</h4>
+                     <img src="images/product/6.jpg" alt="" />
                      <p><input type="number" name="" id="6"> <button id="hat" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -150,8 +168,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>7</h4>
-                     <img src="images/product/12.png" alt="" />
+                     <h4>Szállás</h4>
+                     <img src="images/product/7.jpg" alt="" />
                      <p><input type="number" name="" id="7"> <button id="het" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
@@ -159,8 +177,8 @@
                </div>
                <div class="col-lg-3 col-sm-6 col-md-3">
                   <div class="box-img">
-                     <h4>8</h4>
-                     <img src="images/product/13.png" alt="" />
+                     <h4>Ebéd</h4>
+                     <img src="images/product/8.jpg" alt="" />
                      <p><input type="number" name="" id="8"> <button id="nyolc" onclick="kosarba(this.id)"><img class="gombkocsi" src="images/kocsi.png"
                               alt=""></button></p>
                      <p class="ar">2000 Ft</p>
