--- a/index.html
+++ b/index.html
@@ -89,14 +89,13 @@
             <p id="nyolcadik"></p>
          </div>
          <h2 class="bezar">Mégsem</h2>
-         <h2 class="fizetes" >Fizetés</h2>
+         <h2 id="fiz" class="fizetes" >Fizetés</h2>
       </div>
    </div>
 
    <div class="fiz">
       <div class="container">
          <div>
-            
             <h2 class="bezar2">Mégsem</h2>
          </div>
       </div>
