--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
                <div class="marg col-md-6">
                   <h1 >Fizetés</h1>
                   <br>
-                  <p><input id="radio1" type="radio" name="fizet"> Utánvét (490 Ft)</p>
-                  <p><input id="radio2" type="radio" name="fizet"> Kártyás fizetés</p>
-                  <p><input id="radio3" type="radio" name="fizet"> Banki átutalás</p>
+                  <p><input id="asd" onclick="radio()" type="radio" name="fizet"> Utánvét (490 Ft)</p>
+                  <p><input id="dsa" onclick="radio()" type="radio" name="fizet"> Kártyás fizetés</p>
+                  <p><input id="fss" onclick="radio()" type="radio" name="fizet"> Banki átutalás</p>
 
                   <p>Szállitási díj: <span id="szd"></span></p>
+                  <p>Összeg: <span id="osszeg"></span></p>
 
-                  <p> <h2 class="bezar2">Mégsem</h2> <h2 onclick="megrendel()" class="megrendel">Megrendelés</h2></p>
+                  <p> <h2 class="bezar2">Mégsem</h2> <h2 onclick="megrendel()" id="megrendel">Megrendelés</h2></p>
                </div>
               
             
