--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <div class="right-nav">
 
                   <p id="db">0</p>
-                  <img class="kocsi" src="images/kocsi.png" alt="">
+                  <img onclick="checknum()" class="kocsi" src="images/kocsi.png" alt="">
 
 
 
