--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 </body>
 
 </html>
-<!--éncsinálom js-->
+<!--éncsinálom js.-->
 <script src="js/puzsi.js"></script>
 <!--main js-->
 <script src="js/jquery-1.12.4.min.js"></script>
